dim/spec/test_input/invalid_input/modules/subfolder/Config.dim
Config:
  CompanyName:
    files:
      - ../valid_test_1.dim
      - ../valid_test_2.dim
    category: module